--- a/static/html/index.html
+++ b/static/html/index.html
@@ -6,16 +6,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 		<meta name="description" content="Site By Alexandra Berke">  
 		<meta name="author" content="Alexandra Berke">
-		<link rel="shortcut icon" href="static/images/escher-birds.ico">
+		<link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" type="image/x-icon" href="http://alexandraberke.com/favicon.ico" />
 
 		<link rel="stylesheet" href="static/css/index.css">
+		
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-43101146-2', 'alexandraberke.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 			<!-- handle div -->
 			<div class="tab-div" id="handle-div">
-				<h5>twitter <em>@AlexandraBerke</em></h5>
-				<h5>github <em>aberke</em></h5>
-				<h5><em>alex@alexandraberke.com</em></h5>
+				<a href="https://twitter.com/AlexandraBerke" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @AlexandraBerke</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				<a id="github-handle" target="_blank" href="http://github.com/aberke"</a><img id="github-icon" src="static/images/github-icon.gif" height="25px"><h5>github <em>aberke</em></h5></a>
+				<a href="mailto:alex@alexandraberke.com?subject=[Website]"><h5>email <em>alex@alexandraberke.com</em></h5></a>
 			</div>
 			<!-- handle div -->
 			<!-- resume-div -->
