twitter handle opens twitter profile in new tab

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>  
 		<meta charset="utf-8">  
 		<title>Alexandra Berke</title>  
@@ -23,8 +23,7 @@
 	<body>
 			<!-- handle div -->
 			<div class="tab-div" id="handle-div">
-				<a href="https://twitter.com/AlexandraBerke" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @AlexandraBerke</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				<a target="_blank" href="https://twitter.com/AlexandraBerke"><h5>twitter <em>@AlexandraBerke</em></a>
 				<a id="github-handle" target="_blank" href="http://github.com/aberke"</a><img id="github-icon" src="static/images/github-icon.gif" height="25px"><h5>github <em>aberke</em></h5></a>
 				<a href="mailto:alex@alexandraberke.com?subject=[Website]"><h5>email <em>alex@alexandraberke.com</em></h5></a>
 			</div>
