updated resume and embedding pdf rather than png with <embed> tag to keep links accessible

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -34,7 +34,7 @@
 
 			<!-- resume-div -->
 			<div id="resume-div">
-				<img src="static/resume.png">
+				<embed src="static/resume.pdf"></embed>
 			</div> <!-- resume-div -->
 		</div>
 		<ul id="tabs">
