--- a/static/html/index.html
+++ b/static/html/index.html
@@ -34,7 +34,8 @@
 
 			<!-- resume-div -->
 			<div id="resume-div">
-				<embed src="static/resume.pdf"></embed>
+				<!-- <embed src="static/resume.pdf"></embed> -->
+				<img src="static/resume.png"></img>
 			</div> <!-- resume-div -->
 		</div>
 		<ul id="tabs">
