Revert "updated static files to use png for resume"
This reverts commit ece67254c6199847e478edc39728015fe656d849.

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -34,8 +34,7 @@
 
 			<!-- resume-div -->
 			<div id="resume-div">
-				<!-- <embed src="static/resume.pdf"></embed> -->
-				<img src="static/resume.png"></img>
+				<embed src="static/resume.pdf"></embed>
 			</div> <!-- resume-div -->
 		</div>
 		<ul id="tabs">
