made this a simpler one page web app with link out to resume
complete pivot from goal of redesign - simpler=easier to maintain

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">  
 		<title>Alexandra Berke</title>  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-		<meta name="description" content="Site By Alexandra Berke">  
+		<meta name="description" content="Contact and Resume">  
 		<meta name="author" content="Alexandra Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 
@@ -29,17 +29,9 @@
 				<a target="_blank" href="https://twitter.com/AlexandraBerke"><img src="static/img/twitter_bird.png" height="40px"><p>@AlexandraBerke</p></a>
 				<a id="github-handle" target="_blank" href="http://github.com/aberke"><img src="static/img/github-icon.gif" height="40px"><p>aberke</p></a>
 				<a href="mailto:alex@alexandraberke.com?subject=[Website]"><img src="static/img/email_icon.png" height="40px"><p>alex@alexandraberke.com</p></a>
+				<a target="_blank" href="/resume"><p>Resume</p></a>
 			</div>
 			<!-- handle div -->
-
-			<!-- resume-div -->
-			<div id="resume-div">
-				<embed src="static/resume.pdf"></embed>
-			</div> <!-- resume-div -->
 		</div>
-		<ul id="tabs">
-			<li id='handle-tab' onclick="selectTab(this);selectContent('handle-div');"><span class="tab-title">Handle</span></li>
-			<li id='resume-tab' onclick="selectTab(this);selectContent('resume-div');"><span class="tab-title">Resume</span></li>
-		</ul>
 	</body>
 </html>
