--- a/static/html/index.html
+++ b/static/html/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Alex Berke | aberke | Alexandra Berke">  
 		<meta name="author" content="Alex Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+		<meta property="og:image" content="/static/favicon-big.gif" />
 
 		<link rel="stylesheet" href="static/css/index.css">
 		
@@ -18,7 +19,6 @@
 
 		  ga('create', 'UA-43101146-2', 'auto');
 		  ga('send', 'pageview');
-
 		</script>
 	</head>
 	<body>
@@ -54,8 +54,10 @@
 				<a target="_blank" href="https://github.com/aberke"><p><img src="static/img/github-mark-logo-black-white.png">[Github Hacks] https://github.com/aberke</p></a>
 				
 				<a target="_blank" href="https://twitter.com/AlexandraBerke"><p><img src="static/img/twitter_bird.png">[Tweets] https://twitter.com/AlexandraBerke</p></a>
-<!-- 
-				<a target="_blank" href="/resume"><p>Resume</p></a> -->
+
+				<a target="_blank" href="/api/resume">
+					<p><span class="img" style="color:white;">{  }</span> [Resume for nerds] /api/resume</p>
+				</a>
 			</div>
 			<!-- handle div -->
 		</div>
