--- a/static/html/api-resume.html
+++ b/static/html/api-resume.html
@@ -6,16 +6,15 @@
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <meta property="og:image" content="/static/favicon-big.gif" />
     <link rel="stylesheet" type="text/css" href="/static/css/api-resume.css">
-    <script src="/static/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/static/bower_components/Autolinker.js/dist/Autolinker.js"></script>
-    <script src="/static/bower_components/jsonpanel/jsonpanel.js"></script>
+    <script src="/static/js/jquery/jquery.js"></script>
+    <script src="/static/js/Autolinker.js/Autolinker.js"></script>
+    <script src="/static/js/jsonpanel.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-43101146-2', 'auto');
       ga('send', 'pageview');
     </script>
