--- a/static/html/api-resume.html
+++ b/static/html/api-resume.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="/static/favicon-big.gif" />
     <link rel="stylesheet" type="text/css" href="/static/css/api-resume.css">
     <script src="/static/js/jquery/jquery.js"></script>
-    <script src="/static/js/Autolinker/Autolinker.js"></script>
+    <script src="/static/js/Autolinker.js/Autolinker.js"></script>
     <script src="/static/js/jsonpanel.js"></script>
 
     <script>
