fixed serving assets

--- a/api-resume.html
+++ b/api-resume.html
@@ -5,7 +5,8 @@
     <title>Alex Berke | API Resume</title>
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <meta property="og:image" content="/static/favicon-big.gif" />
-    <link rel="stylesheet" type="text/css" href="/static/css/api-resume.css">
+    <link rel="stylesheet" href="/static/css/api-resume.css">
+
     <script src="/static/js/jquery/jquery.js"></script>
     <script src="/static/js/Autolinker.js/Autolinker.js"></script>
     <script src="/static/js/jsonpanel.js"></script>
