--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 		<meta property="og:image" content="/static/favicon-big.gif" />
 
-		<link rel="stylesheet" href="static/css/index.css">
+		<link rel="stylesheet" href="/static/css/index.css">
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
