--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				
 				<a target="_blank" href="https://twitter.com/AlexandraBerke"><p><img src="static/img/twitter_bird.png">[Tweets] https://twitter.com/AlexandraBerke</p></a>
 
-				<a target="_blank" href="/api/resume">
-					<p><span class="img" style="color:white;">{  }</span> [Resume for nerds] /api/resume</p>
+				<a target="_blank" href="resume-json">
+					<p><span class="img" style="color:white;">{  }</span> [Resume for nerds] JSON Resume</p>
 				</a>
 			</div>
 			<!-- handle div -->
