--- a/resume-json.html
+++ b/resume-json.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width">
-    <title>Alex Berke | API Resume</title>
+    <title>aberke | resume.json</title>
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <meta property="og:image" content="/static/favicon-big.gif" />
     <link rel="stylesheet" href="/static/css/api-resume.css">
@@ -48,7 +48,7 @@
           };
           xhr.send();
         };
-        getJSON('/resume.json');
+        getJSON('static/resume.json');
       });
     </script>
   </head>
@@ -56,7 +56,7 @@
     <div class="jsonpanel"></div>
     <ul class="meta-links">
       <li>
-        <a href="/resume.json">View raw</a>
+        <a href="static/resume.json">View raw</a>
       </li>
     </ul>
   </body>
