simplified landing page

--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
 		<div id="content">
 			<h1>alex berke</h1>
 
-			<p>I have adventures to share and like to <a target="_blank" href="https://www.instagram.com/alextakestheinternet/">tell stories in color,<img src="static/img/instagram-logo.png"></a></p>
+			<br/>
+
+			<p>Current Project: <i><a href="http://www.coloring-book.co" target="_blank">Illustrating Group Theory (A Coloring Book)</a></i></p>
+
+
+<!-- 			<p>I have adventures to share and like to <a target="_blank" href="https://www.instagram.com/alextakestheinternet/">tell stories in color,<img src="static/img/instagram-logo.png"></a></p>
 			<p>but I also know how to <a target="_blank" href="https://twitter.com/AlexandraBerke">write more than a few words<img src="static/img/twitter_bird.png"></a></p>
 			<p><a target="_blank" href="https://medium.com/@aberke/">in black and white. <img src="static/img/medium-logo.png"></a></p>
 			<p>Sometimes when I'm inspired <a target="_blank" href="https://github.com/aberke">I hack <img src="static/img/github-mark-logo-black-white.png"></a></p>
 			<p>on <a target="_blank" href="http://farmers-markets.nyc">side projects,</a></p>
-			<p>but I also know how to get down to <a target="_blank" href="https://www.linkedin.com/in/alex-berke">business. <img src="static/img/linkedin-logo-black-white.png"></a></p>
-			<br />
-			<br />
-			<p>I consider myself creative, but to keep it <a target="_blank" href="https://www.linkedin.com/in/alex-berke">professional</a>, I’m a ...</p>
-			<p>Systems Architect, product oriented Engineer, Hacker for the social good, Math Nerd that loves solving hard problems and working with great people.
-			</p>
-			<br />
-			</br>
+			<p>but I also know how to get down to <a target="_blank" href="https://www.linkedin.com/in/alex-berke">business. <img src="static/img/linkedin-logo-black-white.png"></a></p> -->
+
+			<br/>
+			<br/>
+			<br/>
 
 
 			<!-- handle div -->
@@ -60,6 +62,13 @@
 				</a>
 			</div>
 			<!-- handle div -->
+
+			<br />
+			<br />
+			
+			<p>Creative computer scientist, Systems Architect, product oriented Engineer, Hacker for the social good, Math Nerd that loves solving hard problems and working with great people.
+			</p>
+
 		</div>
 	</body>
 </html>
