added side projects section

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
 			<br/>
 
-			<p>Current Project: <i><a href="http://www.coloring-book.co" target="_blank">Illustrating Group Theory (A Coloring Book)</a></i></p>
+			<p>Current Project:</p>
+			<a class="current-project" style="display: inline-block;" href="http://www.coloring-book.co" target="_blank">Illustrating Group Theory (A Coloring Book)</a>
 
 
-<!-- 			<p>I have adventures to share and like to <a target="_blank" href="https://www.instagram.com/alextakestheinternet/">tell stories in color,<img src="static/img/instagram-logo.png"></a></p>
+			<!-- <p>I have adventures to share and like to <a target="_blank" href="https://www.instagram.com/alextakestheinternet/">tell stories in color,<img src="static/img/instagram-logo.png"></a></p>
 			<p>but I also know how to <a target="_blank" href="https://twitter.com/AlexandraBerke">write more than a few words<img src="static/img/twitter_bird.png"></a></p>
 			<p><a target="_blank" href="https://medium.com/@aberke/">in black and white. <img src="static/img/medium-logo.png"></a></p>
 			<p>Sometimes when I'm inspired <a target="_blank" href="https://github.com/aberke">I hack <img src="static/img/github-mark-logo-black-white.png"></a></p>
@@ -64,10 +65,72 @@
 			<!-- handle div -->
 
 			<br />
-			<br />
-			
-			<p>Creative computer scientist, Systems Architect, product oriented Engineer, Hacker for the social good, Math Nerd that loves solving hard problems and working with great people.
-			</p>
+			<hr/>
+
+
+			<!-- Technology Work -->
+			<h2>Technology Work</h2>
+
+			<br/>
+
+			<p>I currently work on Google Search, within a team whose mission is to leverage technology for social impact.</p>
+
+			<br/>
+
+			<!-- <p>I've also...</p>
+			<p>lead engineering within labs groups (Huffpost Labs + Blue Ridge Labs), built out intelligent phone networks for a startup (Mast Mobile), designed scalable systems for a presidential campaign (Hillary For America), and create art with code (Recurse Center + Pioneer Works).</p> -->
+
+			<br/>
+			<br/>
+
+			<h2>Side Hacks</h2>
+			<br/>
+
+			<p>Current project:</p>
+
+			<div class="side-hack-container">
+				<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/#!/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
+				<a target="_blank" href="http://www.coloring-book.co/#!/" class="link">coloring-book.co</a>
+				<p class="description">A mathematical coloring book that exists both digitally and on paper.</p>
+				<iframe src="http://www.coloring-book.co/#!/"></iframe>
+			</div>
+
+			<p>Some past projects:</p>
+
+			<div class="side-hack-container">
+				<h3 class="name"><a target="_blank" href="https://aberke.github.io/fractals/">Fractals</a></h3>
+				<a href="https://aberke.github.io/fractals/" target="_blank" class="link">aberke.github.io/fractals</a>
+				<a target="_blank" href="https://aberke.github.io/fractals/">
+					<video autoplay loop>
+				  		<source src="/static/triangles.mov" type="video/mp4">
+					</video>
+				</a>
+			</div>
+
+			<div class="side-hack-container">
+				<h3 class="name"><a href="https://www.crowdrise.com/syncwithus">#SyncWithUs</a></h3>
+				<a href="https://www.crowdrise.com/syncwithus" class="link">syncwithus.org</a>
+				<p class="description">Crowd funding to support women's health. (Created in collaboration.)</p>
+				
+				<img style="background: white; margin: 0; width: 200px; height: auto;" src="/static/img/syncwithus-swimmers-1.png"></img>
+			</div>
+
+			<div class="side-hack-container">
+				<h3 class="name"><a target="_blank" href="http://www.l0v3bot.com/">L0v3 Bot</a></h3>
+				<a href="http://www.l0v3bot.com/" target="_blank" class="link">l0v3bot.com/</a>
+				<p class="description">Created at the 2017 <a href="http://www.stupidhackathon.com/" target="_blank">Stupid Hackathon</a>.</p>
+
+				<iframe src="http://www.l0v3bot.com/"></iframe>
+			</div>
+
+			<div class="side-hack-container">
+				<h3 class="name"><a target="_blank" href="http://www.farmers-markets.nyc/">NY Farmers Markets</a></h3>
+				<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc/</a>
+				<p class="description">Advancing access to sustainable eating.</p>
+
+				<iframe src="http://www.farmers-markets.nyc/"></iframe>
+			</div>
+			<!-- Technology Work -->
 
 		</div>
 	</body>
