--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 				<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/#!/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
 				<a target="_blank" href="http://www.coloring-book.co/#!/" class="link">coloring-book.co</a>
 				<p class="description">A mathematical coloring book that exists both digitally and on paper.</p>
-				<iframe src="http://www.coloring-book.co/#!/"></iframe>
+				<div class="iframe-container">
+					<iframe src="http://www.coloring-book.co/#!/"></iframe>
+				</div>
 			</div>
 
 			<p>Some past projects:</p>
@@ -120,7 +122,7 @@
 				<a href="http://www.l0v3bot.com/" target="_blank" class="link">l0v3bot.com/</a>
 				<p class="description">Created at the 2017 <a href="http://www.stupidhackathon.com/" target="_blank">Stupid Hackathon</a>.</p>
 
-				<iframe src="http://www.l0v3bot.com/"></iframe>
+				<div class="iframe-container"><iframe src="http://www.l0v3bot.com/"></iframe></div>
 			</div>
 
 			<div class="side-hack-container">
@@ -128,9 +130,32 @@
 				<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc/</a>
 				<p class="description">Advancing access to sustainable eating.</p>
 
-				<iframe src="http://www.farmers-markets.nyc/"></iframe>
+				<div class="iframe-container">
+					<iframe src="http://www.farmers-markets.nyc/"></iframe>
+				</div>
 			</div>
 			<!-- Technology Work -->
+
+			<br />
+			<hr/>
+
+
+			<!-- Writing -->
+			<h2>Some Writing</h2>
+			<br />
+
+			<ol id="writing-list">
+
+				<li>Contributed to a linear Algebra &amp; computer Science textbook at Brown University: <a href="https://www.amazon.com/Coding-Matrix-Algebra-Applications-Computer/dp/0615880991">"Coding the Matrix: Linear Algebra through Applications to Computer Science"</a></li>
+
+				<li>Published a <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">3 part series about bitcoin on the Huffington Post:</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">(1)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4374031.html">(2)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4381235.html">(3)</a></li>
+
+				<li><a href="https://medium.com/@aberke/">Medium blog</a></li>
+
+				<li><a href="http://www.coloring-book.co">Currently writing a coloring book about math: "Illustrating Group Theory".</a></li>
+
+			</ol>
+			<!-- Writing -->
 
 		</div>
 	</body>
