attempt to fix overflowing iframes

--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
 				<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/#!/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
 				<a target="_blank" href="http://www.coloring-book.co/#!/" class="link">coloring-book.co</a>
 				<p class="description">A mathematical coloring book that exists both digitally and on paper.</p>
-				<div class="iframe-container">
-					<iframe src="http://www.coloring-book.co/#!/"></iframe>
-				</div>
+				<iframe src="http://www.coloring-book.co/#!/"></iframe>
 			</div>
 
 			<p>Some past projects:</p>
@@ -122,7 +120,7 @@
 				<a href="http://www.l0v3bot.com/" target="_blank" class="link">l0v3bot.com/</a>
 				<p class="description">Created at the 2017 <a href="http://www.stupidhackathon.com/" target="_blank">Stupid Hackathon</a>.</p>
 
-				<div class="iframe-container"><iframe src="http://www.l0v3bot.com/"></iframe></div>
+				<iframe src="http://www.l0v3bot.com/"></iframe>
 			</div>
 
 			<div class="side-hack-container">
@@ -130,9 +128,7 @@
 				<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc/</a>
 				<p class="description">Advancing access to sustainable eating.</p>
 
-				<div class="iframe-container">
-					<iframe src="http://www.farmers-markets.nyc/"></iframe>
-				</div>
+				<iframe src="http://www.farmers-markets.nyc/"></iframe>
 			</div>
 			<!-- Technology Work -->
 
