love bot no longer in an iframe -- image instead

--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
 
 			<div class="side-hack-container">
 				<h3 class="name"><a target="_blank" href="http://www.l0v3bot.com/">L0v3 Bot</a></h3>
-				<a href="http://www.l0v3bot.com/" target="_blank" class="link">l0v3bot.com/</a>
+				<a href="http://www.l0v3bot.com/" target="_blank" class="link">l0v3bot.com</a>
 				<p class="description">Created at the 2017 <a href="http://www.stupidhackathon.com/" target="_blank">Stupid Hackathon</a>.</p>
 
-				<iframe src="http://www.l0v3bot.com/"></iframe>
+				<a target="_blank" href="http://www.l0v3bot.com/">
+					<img id="love-bot-img" src="/static/img/lovebot-site-img.png">
+				</a>
 			</div>
 
 			<div class="side-hack-container">
