updated copy for side projects

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<iframe src="http://www.coloring-book.co/#!/"></iframe>
 			</div>
 
-			<p>Some past projects:</p>
+			<p>Some past side hacks:</p>
 
 			<div class="side-hack-container">
 				<h3 class="name"><a target="_blank" href="https://aberke.github.io/fractals/">Fractals</a></h3>
