--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<a target="_blank" href="https://twitter.com/AlexandraBerke"><p><img src="static/img/twitter_bird.png">[Tweets] https://twitter.com/AlexandraBerke</p></a>
 
 				<a target="_blank" href="resume-json">
-					<p><span class="img" style="color:white;">{  }</span> [Resume for nerds] JSON Resume</p>
+					<p><span class="img last" style="color:white;">{  }</span> [Resume for nerds] JSON Resume</p>
 				</a>
 			</div>
 			<!-- handle div -->
@@ -95,7 +95,7 @@
 				<iframe src="http://www.coloring-book.co/#!/"></iframe>
 			</div>
 
-			<p>Some past side hacks:</p>
+			<p>Some past side projects:</p>
 
 			<div class="side-hack-container">
 				<h3 class="name"><a target="_blank" href="https://aberke.github.io/fractals/">Fractals</a></h3>
@@ -150,7 +150,7 @@
 
 				<li><a href="https://medium.com/@aberke/">Medium blog</a></li>
 
-				<li><a href="http://www.coloring-book.co">Currently writing a coloring book about math: "Illustrating Group Theory".</a></li>
+				<li>Currently writing a coloring book about math: <a href="http://www.coloring-book.co">"Illustrating Group Theory"</a>.</li>
 
 			</ol>
 			<!-- Writing -->
