added current solo exhibition

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 			<p>Current Project:</p>
 			<a class="current-project" style="display: inline-block;" href="http://www.coloring-book.co" target="_blank">Illustrating Group Theory (A Coloring Book)</a>
 
+			<br/>
+			<br/>
+			<br/>
+
+			<p>Current Solo Exhibition:</p>
+			<a class="current-project" style="display: inline-block;" href="https://babycastles.com/Wallpaper" target="_blank">WALLPAPER @ Babycastles</a>
+			<a class="current-project" style="display: block; text-decoration: none;" href="https://babycastles.com/Wallpaper" target="_blank">145 w. 14th st Manhattan, NY</a>
+			<a class="current-project" style="display: block; text-decoration: none;" href="https://babycastles.com/Wallpaper" target="_blank">May 31 - June 16, 2018</a>
+
 
 			<!-- <p>I have adventures to share and like to <a target="_blank" href="https://www.instagram.com/alextakestheinternet/">tell stories in color,<img src="static/img/instagram-logo.png"></a></p>
 			<p>but I also know how to <a target="_blank" href="https://twitter.com/AlexandraBerke">write more than a few words<img src="static/img/twitter_bird.png"></a></p>
