updated google job info

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 			<br/>
 
-			<p>I currently work on Google Search, within a team whose mission is to leverage technology for social impact.</p>
+			<p>I currently work as a software engineer on Google Search, specifically focused on news credibility.</p>
 
 			<br/>
 
