updated copy and tried to update image shown in mobile search snippets

--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
 		  ga('send', 'pageview');
 		</script>
 	</head>
+	<script type="application/ld+json">
+	{
+		"@context": "http://schema.org/",
+		"name": "Alex Berke",
+		"image": [
+		"http://www.aberke.com/static/img/static/headshot.png"],
+		"description": "Alex Berke | aberke"
+	}
+	</script>
 	<body>
-		<!-- <div id="top-bar" class="bar"></div> -->
 		<section id="general-info">
 			<div class="content">
 				<h1>alex berke</h1>
 
-				<br/>
-
-				<p>Current Project:</p>
-				<a class="current-project" style="display: inline-block;" href="http://www.coloring-book.co" target="_blank">Illustrating Group Theory (A Coloring Book)</a>
-
-				<br/>
 				<br/>
 				<br/>
 
@@ -41,7 +43,7 @@
 				<div id="handle-div">
 					<a href="mailto:alex@aberke.com?subject=[Website]"><p><img src="static/img/mail-black-white.png">[MailTo] alex@aberke.com</p></a>
 
-					<a target="_blank" href="https://www.instagram.com/alextakestheinternet/"><p><img src="static/img/instagram-logo.png">[Insta] https://www.instagram.com/alextakestheinternet</p></a>
+					<a target="_blank" href="https://instagram.com/alextakestheinternet/"><p><img src="static/img/instagram-logo.png">[Insta] https://instagram.com/alextakestheinternet</p></a>
 					
 					<a target="_blank" href="https://medium.com/@aberke/"><p><img src="static/img/medium-logo.png">[Medium Blog] https://medium.com/@aberke</p></a>
 					
@@ -57,12 +59,20 @@
 				</div>
 				<!-- handle div -->
 
-				<br />
 				<hr/>
 
 
-				<!-- Technology Work -->
-				<h2>Technology Work</h2>
+				<br/>
+
+				<p>Currently a graduate student and research assistant at MIT’s Media Lab.</p>
+
+				<br/>
+				<br/>
+				<br/>
+
+
+				<!-- Past Technology Work -->
+				<h2>Past Technology Work</h2>
 
 				<br/>
 
@@ -83,16 +93,14 @@
 				<h2>Side Hacks</h2>
 				<br/>
 
-				<p>Current project:</p>
-
 				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/#!/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
-					<a target="_blank" href="http://www.coloring-book.co/#!/" class="link">coloring-book.co</a>
-					<p class="description">A mathematical coloring book that exists both digitally and on paper.</p>
-					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/#!/"></iframe>
+					<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
+					<a target="_blank" href="http://www.coloring-book.co/" class="link">coloring-book.co</a>
+					<p class="description">A coloring book about math that is both digital and on paper.</p>
+					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
 				</div>
 
-				<p>Some past side projects:</p>
+				<br/>
 
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://aberke.github.io/fractals/">Fractals</a></h3>
