--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">  
 		<title>aberke | Alex Berke</title>  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-		<meta name="description" content="Alex Berke | aberke | Alexandra Berke">  
+		<meta name="description" content="Alex Berke | aberke | Full of internets and adventures. Currently at MIT's Media Lab.">  
 		<meta name="author" content="Alex Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 		<meta property="og:image" content="/static/favicon-big.gif" />
