fixed formatting of iframes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
 				<br/>
 
-				<p>Most recently working as a software engineer at Google, on a Search team focused on news credibility.</p>
+				<p>Working at the intersection of technology and social impact.</p>
+
+				<p>Most recently as a software engineer at Google, on a Search team focused on news credibility.</p>
 
 				<br/>
 
