--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 				<ol id="writing-list">
 
-					<li>Contributed to a linear Algebra &amp; computer Science textbook at Brown University: <a href="https://www.amazon.com/Coding-Matrix-Algebra-Applications-Computer/dp/0615880991">"Coding the Matrix: Linear Algebra through Applications to Computer Science"</a></li>
+					<li>Contributed to a linear algebra &amp; computer science textbook at Brown University: <a href="https://www.amazon.com/Coding-Matrix-Algebra-Applications-Computer/dp/0615880991">"Coding the Matrix: Linear Algebra through Applications to Computer Science"</a></li>
 
 					<li>Published a <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">3 part series about bitcoin on the Huffington Post:</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">(1)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4374031.html">(2)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4381235.html">(3)</a></li>
 
