--- a/index.html
+++ b/index.html
@@ -3,23 +3,13 @@
 	<head>  
 		<meta charset="utf-8">  
 		<title>aberke | Alex Berke</title>  
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-		<meta name="description" content="Alex Berke | aberke | Full of internets and adventures. Currently at MIT's Media Lab.">  
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Alex Berke | aberke | Full of internets and adventures. Currently at MIT's Media Lab.">
 		<meta name="author" content="Alex Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 		<meta property="og:image" content="/static/favicon-big.gif" />
 
 		<link rel="stylesheet" href="/static/css/index.css">
-		
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-43101146-2', 'auto');
-		  ga('send', 'pageview');
-		</script>
 	</head>
 	<script type="application/ld+json">
 	{
@@ -64,7 +54,7 @@
 
 				<br/>
 
-				<p>Currently a graduate student and research assistant at MIT’s Media Lab.</p>
+				<p>Currently at MIT’s Media Lab.</p>
 
 				<br/>
 				<br/>
@@ -92,7 +82,7 @@
 		<section id="side-hacks">
 			<div class="content">
 
-				<h2>Side Hacks</h2>
+				<h2>Side Projects &amp; Hacks</h2>
 				<br/>
 
 				<div class="side-hack-container">
@@ -100,6 +90,15 @@
 					<a target="_blank" href="http://www.coloring-book.co/" class="link">coloring-book.co</a>
 					<p class="description">A coloring book about math that is both digital and on paper.</p>
 					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
+				</div>
+
+				<br/>
+
+				<div class="side-hack-container">
+					<a target="_blank" href="http://fab.cba.mit.edu/classes/863.18/CBA/people/alex/index.html">
+						<h3 style="text-decoration: underline;" class="name">How to Make (Almost) Anything</span></h3>
+						<p class="description">MIT Fall 2018</p>
+					</a>
 				</div>
 
 				<br/>
@@ -134,7 +133,7 @@
 
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="http://www.farmers-markets.nyc/">NY Farmers Markets</a></h3>
-					<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc/</a>
+					<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc</a>
 					<p class="description">Advancing access to sustainable eating.</p>
 
 					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.farmers-markets.nyc/"></iframe>
@@ -143,6 +142,38 @@
 			</div>
 		</section>
 		<!-- Side hacks -->
+
+		<section id="talks">
+			<div class="content">
+
+				<hr/>
+				<br/>
+				<br/>
+
+				<h2>Recent Talks &amp; Exhibitions</h2>
+				<br />
+
+				<ol id="talks-list">
+
+					<li>06.2018 | Mathematical Lecture and Color Workshop @ NYC Salon, Manhattan NY</li>
+					<li>06.2018 | Guest Speaker @ New Rochelle’s IDEALab ‘Creative Conversation’</li>
+					<li>06.2018 | Art Installation: WALLPAPER @ Google NYC office, Manhattan NY</li>
+					<li>06.2018 | Technical Talk: Building Art @ NYC HTML5, Manhattan NY</li>
+					<li>06.2018 | Math Lecture &amp; Workshop @ Babycastles, Manhattan NY</li>
+					<li>05.2018 | Solo Exhibition: WALLPAPER @ Babycastles, Manhattan NY</li>
+					<li>02.2018 | Presentation @ Creative Coding NYC, Manhattan NY</li>
+					<li>01.2018 | Mathematical Discussion and Workshop @ The Recurse Center, Manhattan NY</li>
+					<li>01.2018 | AngularNYC Technical Presentation, Manhattan NY</li>
+					<li>10.2017 | Moderated Panel @ Grace Hopper Conference (x2 due to popular demand)</li>
+					<li>06.2017 | HackNY Panel, Brooklyn NY</li>
+					<li>06.2017 | Art Exhibition @ Pioneer Works, Brooklyn NY</li>
+					<li>02.2016 | Code Driven NYC @ First Mark Capital, Manhattan NY</li>
+					<li>01.2014 | NY Tech Meetup, Manhattan NY</li>
+					
+				</ol>
+			</div>
+		</section>
+		<!-- talks -->
 
 		<section id="writing">
 			<div class="content">
@@ -168,6 +199,17 @@
 			</div>
 		</section>
 		<!-- Writing -->
+
+		
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-43101146-2', 'auto');
+		  ga('send', 'pageview');
+		</script>
 
 	</body>
 </html>
