added rutgers event

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
 				<ol id="talks-list">
 
+					<li><a href="http://steamwith.us/RutgersSTEAM.html">02.2019 | Invited Speaker to Rutgers STEAM @ Rutgers University, NJ</a></li>
 					<li>06.2018 | Mathematical Lecture and Color Workshop @ NYC Salon, Manhattan NY</li>
 					<li>06.2018 | Guest Speaker @ New Rochelle’s IDEALab ‘Creative Conversation’</li>
 					<li>06.2018 | Art Installation: WALLPAPER @ Google NYC office, Manhattan NY</li>
