updated resume, projects, and font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">  
 		<title>aberke | Alex Berke</title>  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Alex Berke | aberke | Full of internets and adventures. Currently at MIT's Media Lab.">
+		<meta name="description" content="Alex Berke | Full of internets and adventures. Currently at MIT's Media Lab.">
 		<meta name="author" content="Alex Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 		<meta property="og:image" content="/static/favicon-big.gif" />
@@ -86,10 +86,42 @@
 				<br/>
 
 				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="http://www.coloring-book.co/">Illustrating Group Theory <span style="display: inline-block;">(A Coloring Book)</span></a></h3>
-					<a target="_blank" href="http://www.coloring-book.co/" class="link">coloring-book.co</a>
-					<p class="description">A coloring book about math that is both digital and on paper.</p>
+					<h3 class="name"><a target="_blank" href="http://www.beautifulsymmetry.onl">Beautiful Symmetry: <span style="display: inline-block;">A Coloring Book about Math</span></a></h3>
+					<a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a>
+					<p class="description">A coloring book that illustrates group theory, both online and on paper.</p>
 					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
+				</div>
+
+				<br/>
+
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://aberke.github.io/income-race-bikes">Income, Race, Bikes</h3>
+					<a target="_blank" href="https://aberke.github.io/income-race-bikes" class="link">aberke.github.io/income-race-bikes</a>
+					<p class="description">Is the placement of bike-share docks equitable?</p>
+					<iframe style="width: 125%; transform: scale(0.8); transform-origin: 0 0;" class="hack-container" src="https://aberke.github.io/income-race-bikes/?ha"></iframe>
+				</div>
+
+				<br/>
+
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/">[bike] swarm</h3>
+					<a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/" class="link">media.mit.edu/projects/bike-swarm</a>
+					<p class="description">A decentralized system of synchronized lights to coordinate urban mobility swarms</p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/wUl-CHJ6DK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+
+				<br/>
+
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42">Algorithmic Crypto-trading &amp; Arbitrage</h3>
+					<a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42" class="link">medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42</a>
+				</div>
+
+				<br/>
+
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/">Media Lab Projects</h3>
+					<a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/" class="link">media.mit.edu/people/aberke</a>
 				</div>
 
 				<br/>
@@ -194,7 +226,7 @@
 
 					<li><a href="https://medium.com/@aberke/">Medium blog</a></li>
 
-					<li>Currently writing a coloring book about math: <a href="http://www.coloring-book.co">"Illustrating Group Theory"</a>.</li>
+					<li><a href="http://www.beautifulsymmetry.onl">"Beautiful Symmetry: A Coloring Book About Math"</a></li>
 
 				</ol>
 			</div>
