better styling for youtube embed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/">[bike] swarm</h3>
 					<a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/" class="link">media.mit.edu/projects/bike-swarm</a>
 					<p class="description">A decentralized system of synchronized lights to coordinate urban mobility swarms</p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/wUl-CHJ6DK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="bikeswarm-youtube" width="560" height="315" src="https://www.youtube.com/embed/wUl-CHJ6DK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 				<br/>
