replaced ny farmers markets iframe with images

--- a/index.html
+++ b/index.html
@@ -164,11 +164,15 @@
 				</div>
 
 				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="http://www.farmers-markets.nyc/">NY Farmers Markets</a></h3>
-					<a href="http://www.farmers-markets.nyc/" class="link">farmers-markets.nyc</a>
-					<p class="description">Advancing access to sustainable eating.</p>
-
-					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.farmers-markets.nyc/"></iframe>
+					<h3 class="name"><a target="_blank" href="https://github.com/aberke/eat-healthy-NYC">NY Farmers Markets</a></h3>
+					<p class="description">Advancing access to healthy and sustainable eating, with a focus on low income families.</p>
+					<p>Previously @ <a href="https://github.com/aberke/eat-healthy-NYC" class="link">farmers-markets.nyc</a></p>
+					<div class="img-carousel">
+						<img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-closed.png" />
+						<img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-1.png" />
+						<img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-2.png" />
+					</div>
+					<a href="https://github.com/aberke/eat-healthy-NYC" class="link">github.com/aberke/eat-healthy-NYC</a>
 				</div>
 
 			</div>
